# ImageAnalysis

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  argv_loop(1).c  cmake_install.cmake  polygons(1).cpp
Models/: trainModel.xml
help/: argv_loop(1).c
report/: pourcentages.ods  report.tex
src/modelMaker/: makeModel.cpp  makeModels.cpp
src/solver/: main.cpp
